# phdwork

./: CMakeLists.txt  PhDConfig.h.in  setupBuild.sh
Analyzer/: .#ConfigManager.h  AdjPP.h  Analyzer.includes  CMakeLists.txt  CombinationEngine.h  Comment.cpp  Comment.h  ConfigEntry.cpp  ConfigEntry.h  ConfigManager.cpp  ConfigManager.h  DataElement.cpp  DataElement.h  Doxyfile  ExtensibleDb.h  FNameManager.cpp  FNameManager.h  FluxCalculator.h  HPusher.cpp  HPusher.h  LinkDef.h  Makefile  PAnalysis.cpp  PP2d.cpp  PPCoincMap.cpp  PPCoincMap.h  PPCoincMapRegions.cpp  PPCoincMapRegions.h  PlotVisualizer.cpp  PlotVisualizer.h  ProofPlot.cpp  SScalerTool.cpp  SScalerTool.h  ScalerTool.cpp  Visualizer.cpp  Visualizer.h  analyzerun.cpp  cut.cpp  cut.h  gmon.out  (+1 more)
Fit/: AdditiveIntegrand.cpp  AngDistC.h  CMakeLists.txt  FCN_ChiSq.cpp  FCN_ChiSq.h  FitAngularDistribution.cpp  GenChiSq.cpp  GenIntegralChiSq.h  LambdaChiSq.cpp  LinkDef.h  MultiDimFunctionController.cpp  MultiDimFunctionController.h  MultiDimVisualizer.cpp  MultiDimVisualizer.h  ParamFunctorAdapter.cpp  Parameter.cpp  Parameters.cpp  Phase1ChiSq.cpp  Phase1ChiSq.h  Phase1ChiSqC.cpp  Phase1ChiSqY.cpp  Phase1ChiSqY.h  Phase2ChiSqC.cpp  Phase2ChiSqY.cpp  Plane.cpp  PolPartAngDistC.h  ProgressBar.h  RandomSurface.cpp  ReducedDimFunction.h  ReducedDimFunctionController.cpp  RegionIntegralChiSq.cpp  SphCoordsIntegrand.cpp  SphIntegrand.h  TAngFoamIntegrandWrapper.cpp  TAngFoamIntegrandWrapper.h  TH2Func.h  UnitConverter.h  UnitFilter.cpp  UnitFilter.h  UnpolAngDistC.cpp  (+4 more)
FragSim232Th/: CMakeLists.txt  Doxyfile  Doxyfile.bak  FragSim232Th.cc  FragSim232Th.creator.user.1.3  FragSim232Th.creator.user.2.3pre1  FragSim232Th.creator.user.2.7pre1  FragSim232Th.files  FragSim232Th.includes  GNUmakefile  _alpha_source_1.seed  aar0  aar0.5  aar1  aar2  aar3  aar4  ar0  ar1  ar2  ar3  ar4  ar5  asdf.root  create_strip_plots.C  fragsim232th_complete  geo_traj.mac  getZ.C  overlay_alpha_strip_ratios.C  overlay_alpha_strip_ratios_y.C  overlay_alpha_strip_ratios_z.C  rootlogon.C  run.sh  run_alphas_rot.sh  run_alphas_x.sh  run_alphas_y.sh  run_alphas_z.sh  run_simulation.sh  run_simulation2.sh  run_today.sh  (+16 more)
FragSim232Th/Notes/: 9.26.2011.odt  9.27.2011.odt  GeometryCalculations.ods  TFoamAndTFoamIntegrand.txt
FragSim232Th/analysis/: Analyzer.cpp  Analyzer.h  AngularDist.cpp  AngularDist.h  BoundaryCreator.cpp  BoundaryCreator.h  CMakeLists.txt  DistanceAndTravelTimeComputer.cpp  EnergyHistSorted.h  EtaDbFiller2C.cpp  EtaDbFiller2C.h  FormRatiosOfRegions.cpp  GridSorter.cpp  GridSorter.h  LambdaGenerator.cpp  LambdaGenerator.h  LinkDef.h  Makefile  OverlayRatios.cpp  PlotBoundaries.cpp  RatioVsOrigin.h  SiStripGenerator.h  SolidAnglePDFGeneratorC.h  YieldGenerator.cpp  analyze.cpp  analyze_all.cpp  combine.cpp  dictFragSimAnalyzer.cpp  dictFragSimAnalyzer_rdict.pcm  gmon.out  move_lambda_results  overlay_alpha_strip_ints.C  overlay_alpha_strip_ints_y.C  setup.sh  test_boundary_finder.cpp  tmpin
FragSim232Th/data/: .Piessen_6.97_TKE.dat.swp  Piessen_Distributions.ods
FragSim232Th/include/: AllVolumeSource.hh  AllVolumeSource2.hh  FragSimDetConstruction.hh  FragSimDetMessenger.hh  FragSimEventAction.hh  FragSimEventAction.hh~  FragSimPrimGenActionMessenger.hh  FragSimPrimaryGeneratorAction.hh  FragSimRunAction.hh  FragSimRunActionMessenger.hh  FragSimSource.hh  FragSimSource2.hh  FragSimSourceMessenger.cc.~1~  FragSimSourceMessenger.hh  MassDistribution.hh  PSPreStepEnergy.hh  ParameterisedSphereBuilder.hh  PhysListEmStandard.hh  PhysListEmStandardGS.hh  PhysListEmStandardSS.hh  PhysicsList.hh  PhysicsListMessenger.hh  PrimarySupervisor.hh  RandomSeedManager.hh  SDAngles.hh.unfinished  SSDBuilder.hh  SSDBuilder.hh~  SSDHit.hh  SSDHit.hh~  SSDSensitivity.hh  SensitiveMultiFuncParamSphere.hh  SensitiveSSD.hh  SphereParameterisation.hh  StepMax.hh  StepMaxMessenger.hh  Target.hh  TargetHit.hh  TargetHit.hh~  TargetMountBuilder.hh  TargetSensitivity.hh  (+3 more)
FragSim232Th/macros/: MacroDescriptions.ods  alpha_source.mac  alpha_source_bsh3mm_r0_r0.mac  alpha_source_gxn2_gyn1_gz0_r3_r5_x1_y0_z0.mac  alpha_source_intrn10deg_r0_r0.mac  alpha_source_intrn3deg_r0_r0.mac  alpha_source_intrn3deg_r0_r0_avs2.mac  alpha_source_r0_r0.mac  (+72 more)
FragSimAnalysis/: Analyzer.cpp  Analyzer.h  AngleAverager.cpp  AngleAverager.h  Axis.cpp  Axis.h  CMakeLists.txt  CompareStripBoundaryToStripData.cpp  ComputeDiffMetaLightVsHeavy.cpp  Coord2D.cpp  Coord2D.h  CreateThetaRatios.cpp  DistanceAndTravelTimeComputer.h  EnergyHist.cpp  EnergyHist.h  EnergyHistSorted.cpp  EtaDbFiller2C.cpp  InspectProbEscapeVsSurfThickness.cpp  PlotAlphaSurfThicknessResults.C  RatioVsOrigin.cpp  SiStripGenerator.cpp  SolidAngleComputer.cpp  SolidAngleComputer.h  SolidAnglePDFGeneratorC.cpp  TSelectorInsert.h  TTreeProxy.cpp  TTreeProxy.h  YieldGenerator.cpp  YieldGenerator.h  analyze.cpp  analyze_lambda.cpp  rootlogon.C
FragmentDists/: AngDist.cpp  AngDist.h  AngMarginalEta2.cpp  AngMarginalEta2.h  AngMarginalEta2C.cpp  AngMarginalEta2C.h  CMakeLists.txt  Eta2.cpp  Eta2.h  Eta2C.cpp  Eta2C.h  LinkDef.h  MDataRange.cpp  MDataRange.h  SphCoordsIntegrand.cpp  SphCoordsIntegrand.h  SphIntegrand.cpp  SphIntegrand.h  TH2Func.cpp  TH2Func.h
NuclearChart/: CMakeLists.txt  Isotope.cpp  Isotope.h  LinkDef.h  Makefile  NuclearChart.cpp  NuclearChart.cpp~  NuclearChart.h  NuclearChart.h~  NuclearChartBuilder.cpp  NuclearChartBuilder.cpp~  NuclearChartBuilder.h  NuclearChartBuilder.h~  dictNuclearChart.cpp  dictNuclearChart.h  test  test.cpp
ROOTUtils/: CMakeLists.txt  ColumnFileLoader.cpp  ColumnFileLoader.h  ColumnFileReader.cpp  ColumnFileReader.h  ConsistentAxisConverter.cpp  ConsistentAxisConverter.h  DataBucket.cpp  DataBucket.h  HistFiller.cpp  HistFiller.h  LinkDef.h  Makefile  MultiTreeMaker.cpp  MultiTreeMaker.h  ROOTUtils.cpp  ROOTUtils.h  ROOTUtils.includes  STDatime.cpp  STDatime.h  SingleTreeMaker.cpp  SingleTreeMaker.h  TH2CosPhiSmear.cpp  TH2CosPhiSmear.h  TH2GaussianSmear.cpp  TH2GaussianSmear.h  TreeMaker.cpp  TreeMaker.h  VectorSorter.cpp  VectorSorter.h  VectorWriter.cpp  VectorWriter.h
(+780 files in other folders)
