
set(FragSimAnalyzer_SOURCES 
    TSelectorInsert.cpp 
    TSelectorInsert.h 
    SiStripGenerator.cpp
    SiStripGenerator.h
    AngleAverager.cpp
    AngleAverager.h
    SolidAngleComputer.cpp
    SolidAngleComputer.h
    EnergyHist.cpp 
    EnergyHist.h
    TTreeProxy.cpp
    TTreeProxy.h
    Analyzer.cpp
    Analyzer.h
    LambdaGenerator.cpp
    LambdaGenerator.h
    EtaDbFiller2C.cpp
    EtaDbFiller2C.h
    SolidAnglePDFGeneratorC.cpp
    SolidAnglePDFGeneratorC.h
    YieldGenerator.cpp
    YieldGenerator.h
    RatioVsOrigin.cpp
    RatioVsOrigin.h
    EnergyHistSorted.cpp
    EnergyHistSorted.h
    LinkDef.h)

add_executable(analyze

